iac/k8s/bak/deployment2.yaml
NAME: avalier-demo
LAST DEPLOYED: Sun Jun 19 23:46:31 2022
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
HOOKS:
MANIFEST:
---
# Source: avalier-demo1/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avalier-demo-avalier-demo1
  labels:
    app: avalier-demo-avalier-demo1
    helm.sh/chart: avalier-demo1-0.1.0
    app.kubernetes.io/name: avalier-demo1
    app.kubernetes.io/instance: avalier-demo
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: avalier-demo1
      app.kubernetes.io/instance: avalier-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: avalier-demo1
        app.kubernetes.io/instance: avalier-demo
    spec:
      securityContext:
        {}
      containers:
        - name: avalier-demo1
          securityContext:
            {}
          image: "avalier.azurecr.io/demo1:master"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          ports:
            - name: https
              containerPort: 5001
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /api/health
          #     port: 5000
          # readinessProbe:
          #   httpGet:
          #     path: /api/health
          #     port: 5000
          resources:
            null
